# Lab

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  agents.py  band_agents.py  locustfile.py  main.py  persistence.py  persistence_sqlite.py  pyproject.toml  requirements.txt  run_real_band_agents.py  scenario.py  test_band.py
backend/tests/: conftest.py  test_agents.py  test_main.py  test_persistence.py  test_scenario.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/public/: board_room.html  crisis_command.html  dashboard.html  index.html  severity_orb.html  war_room.html
frontend/src/__tests__/: CommandCenterContext.test.tsx  NeuralGraph.test.tsx  SpaceBackground.test.tsx  page.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  NeuralGraph.tsx  PredictiveChart.tsx  SeverityOrb.tsx  SpaceBackground.tsx
frontend/src/context/: CommandCenterContext.tsx
frontend/src/test/: setup.ts  test-utils.tsx
