[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "band-sdk>=1.0.0",
    "fastapi>=0.137.1",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
